--- a/about/index.html
+++ b/about/index.html
@@ -355,7 +355,7 @@ I am a data generalist. I work as a consultant in data science and AI. I could g
           return;
         }
         var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-        var disqus_shortname = 'hugo-tranquilpeak-theme';
+        var disqus_shortname = 'data-think';
         dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
         (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
       })();
