--- a/projects/2022-12-06-google-analytics-with-api/index.html
+++ b/projects/2022-12-06-google-analytics-with-api/index.html
@@ -426,7 +426,7 @@ Here you can find a list of the blogs that use Tranquilpeak theme, with differen
           return;
         }
         var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-        var disqus_shortname = 'hugo-tranquilpeak-theme';
+        var disqus_shortname = 'data-think';
         dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
         (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
       })();
