add reading time and consent

--- a/about/index.html
+++ b/about/index.html
@@ -253,7 +253,8 @@ if (!doNotTrack) {
   
   <div class="postShorten-meta post-meta">
     
-    
+    <span style="margin-left: 20px;"></span> 
+    Reading time: 1 minute
   </div>
 
 </div>
