--- a/contact/index.html
+++ b/contact/index.html
@@ -249,7 +249,8 @@ if (!doNotTrack) {
   
   <div class="postShorten-meta post-meta">
     
-    
+    <span style="margin-left: 20px;"></span> 
+    Reading time: 1 minute
   </div>
 
 </div>
