--- a/contact/index.html
+++ b/contact/index.html
@@ -278,7 +278,7 @@ if (!doNotTrack) {
           
           <div class="post-content markdown">
             <div class="main-content-wrap">
-              <p>You can get in touch with me via <a href="mailto:xia.he88@gmail.com">email</a> and consult my professional profile on <a href="https://www.linkedin.com/in/xia-he-bleinagel-51773585/">LinkedIn</a>.</p>
+              <p>You can get in touch with me via <a href="mailto:info@xiahe-bleinagel.com">email</a> and consult my professional profile on <a href="https://www.linkedin.com/in/xia-he-bleinagel-51773585/">LinkedIn</a>.</p>
 
               
 
