--- a/privacy/index.html
+++ b/privacy/index.html
@@ -310,7 +310,7 @@ Disclosure of information</p>
 <p>Security</p>
 <p>We take reasonable measures to protect the information we collect from you against unauthorized access, disclosure, alteration, or destruction. However, no data transmission over the internet or storage system can be guaranteed to be 100% secure.</p>
 <p>Your rights</p>
-<p>You have the right to request access to and correction of your personal information that we hold. You may also request that we delete your personal information from our systems. To make such requests or for any other inquiries related to our privacy practices, please contact us at <a href="mailto:xia.he88@gmail.com">email</a>.</p>
+<p>You have the right to request access to and correction of your personal information that we hold. You may also request that we delete your personal information from our systems. To make such requests or for any other inquiries related to our privacy practices, please contact us at <a href="mailto:info@xiahe-bleinagel.com">email</a>.</p>
 <p>Changes to this Privacy Policy</p>
 <p>We reserve the right to modify this Privacy Policy at any time without prior notice. Any changes we make to this Policy will be posted on this page, and the effective date will be updated accordingly.</p>
 <p>By using our website, you signify your acceptance of this Privacy Policy. If you do not agree with this Policy, please do not use our website.</p>
